--- a/backend/AddressProject.WebApi/AddressProject.WebApi.csproj
+++ b/backend/AddressProject.WebApi/AddressProject.WebApi.csproj
@@ -10,6 +10,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\AddressProject.Business\AddressProject.Business.csproj" />
       <ProjectReference Include="..\AddressProject.Common\AddressProject.Common.csproj" />
     </ItemGroup>
 
