Add MongoDb connection

--- a/backend/AddressProject.WebApi/appsettings.json
+++ b/backend/AddressProject.WebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "mongoDbConnection": "mongodb://127.0.0.1:27017"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
