--- a/backend/AddressProject.DAL/AddressProject.DAL.csproj
+++ b/backend/AddressProject.DAL/AddressProject.DAL.csproj
@@ -5,7 +5,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Repository" />
+      <PackageReference Include="MongoDB.Bson" Version="2.13.2" />
+      <PackageReference Include="MongoDB.Driver" Version="2.13.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="Microsoft.Extensions.Configuration.Abstractions, Version=5.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60">
+        <HintPath>..\..\..\..\..\..\..\usr\local\share\dotnet\shared\Microsoft.AspNetCore.App\5.0.9\Microsoft.Extensions.Configuration.Abstractions.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
 </Project>
