Add backend fixes and db connection

--- a/backend/AddressProject.WebApi/appsettings.json
+++ b/backend/AddressProject.WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "mongoDbConnection": "mongodb://127.0.0.1:27017"
+    "mongoDbConnection": "mongodb://root:example@mongo:27017"
   },
   "Logging": {
     "LogLevel": {
