--- a/backend/AddressProject.WebApi/appsettings.json
+++ b/backend/AddressProject.WebApi/appsettings.json
@@ -9,5 +9,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "FrontendServerUrl": "http://localhost:3000"
 }
