Small fixes on backend and use of app settings

--- a/backend/AddressProject.WebApi/appsettings.json
+++ b/backend/AddressProject.WebApi/appsettings.json
@@ -2,13 +2,8 @@
   "ConnectionStrings": {
     "mongoDbConnection": "mongodb://root:example@mongo:27017"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
   "AllowedHosts": "*",
-  "FrontendServerUrl": "http://localhost:3000"
+  "FrontendServerUrl": "http://localhost:3000",
+  "GoogleMapsAPIUrl": "https://maps.googleapis.com/maps/api",
+  "GoogleMapsApiKey": "AIzaSyDyo3C2rZVouan7-1MzC-xR378mmhIQJw8"
 }
