--- a/backend/AddressProject.Providers/AddressProject.Providers.csproj
+++ b/backend/AddressProject.Providers/AddressProject.Providers.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
       <PackageReference Include="RestSharp" Version="106.12.0" />
     </ItemGroup>
 
